@@ -2,6 +2,7 @@ dsm news!
 
 # 2.2.16
  * check that any Sample.Labels match up, if none do then throw an error. Thanks to Madhura Davate for bringing this issue to my attention.
+ * gamma option removed, since it now is not ignored by gam(). If using method="GCV.Cp" then gamma=1.4 should still be used (but generally we advise using REML rather than GCV for smoothing parameter selection)
 
 # 2.2.15
  * when mexdolphins is loaded using data(), the data no longer need to be attach()ed
